Migrate Flask to Django, update Docker Compose, and reorganize config files
- Add Django project (djangoTestServer) with cradle app
- Port Flask models, views, templates, and MQTT integration to Django
- Update docker-compose.yml to use Django image and reorganize config files
- Move mos.conf and backup_loop.sh to project root
- Update environment variable defaults for consistency
- Add GCP dual instance setup guide
- Update .gitignore for macOS and backup files

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,13 @@ venv.bak/
 # Docker
 *.log
 docker-compose.override.yml
+
+# macOS
+.DS_Store
+
+# Database backups
+backups/*.sql
+
+# Markdown
+.README_BACKUP.md
+.README_DOCKER.md
