--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,10 @@
 services:
   web:
-    build: ./smart_cradle_server
-    image: smart-cradle-server:latest
+    image: joohyun7818/smart-cradle-server:latest
     ports:
-      - "80:80"
-    # 개발 환경에서는 .env.example을 복사해 .env를 만들어 사용하세요
+      - "80:8000"
     env_file:
       - ./.env
-      - ./smart_cradle_server/.env.example
     depends_on:
       - db
       - mosquitto
@@ -29,7 +26,7 @@ services:
     ports:
       - "1883:1883"
     volumes:
-      - ./smart_cradle_server/mos.conf:/mosquitto/config/mosquitto.conf:ro
+      - ./mos.conf:/mosquitto/config/mosquitto.conf:ro
     restart: unless-stopped
 
   backup:
@@ -40,7 +37,7 @@ services:
       - ./.env
     volumes:
       - ./backups:/backups
-      - ./scripts/backup_loop.sh:/backups/backup_loop.sh:ro
+      - ./backup_loop.sh:/backups/backup_loop.sh:ro
     # run our backup loop script copied into the image via bind mount
     # invoke bash with the script path to avoid shebang execution permission issues
     command: ["/bin/bash","/backups/backup_loop.sh"]
