--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     ports:
       - "1883:1883"
     volumes:
-      - ./mos.conf:/mosquitto/config/mosquitto.conf:ro
+      - ./mos.conf:/mosquitto/config/mosquitto.conf
     restart: unless-stopped
 
 volumes:
