--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 services:
   web:
-    image: joohyun7818/smart-cradle-server:latest
+    image: joohyun7818/smart-cradle-flask:latest
+    # Flask app listens on 80 inside container (gunicorn) -> map directly
     ports:
-      - "80:8000"
+      - "80:80"
     env_file:
       - ./.env
     depends_on:
@@ -14,7 +15,7 @@ services:
     ports:
       - "1883:1883"
     volumes:
-      - ./mos.conf:/mosquitto/config/mosquitto.conf
+      - ./smart_cradle_server/mos.conf:/mosquitto/config/mosquitto.conf
     restart: unless-stopped
 
 volumes:
