빌드된 smart_cradle_server 도커 이미지와 관련 파일 업데이트

--- a/smart_cradle_server/.env.example
+++ b/smart_cradle_server/.env.example
@@ -1,11 +1,9 @@
-# 복사해서 .env로 사용하세요
-MYSQL_ROOT_PASSWORD=example_root_pw
+MYSQL_ROOT_PASSWORD=root_password_1234
 MYSQL_DATABASE=smartcradle
 MYSQL_USER=sc_user
-MYSQL_PASSWORD=sc_pass
-
-# 서버 코드에서 환경변수를 직접 사용하도록 변경하면 아래처럼 설정하세요
-# 예: SQLALCHEMY_DATABASE_URI=mysql+pymysql://sc_user:sc_pass@db/smartcradle
+MYSQL_PASSWORD=SC_password_1234@
+MYSQL_HOST=10.128.0.3
+MYSQL_PORT=3306
 MQTT_BROKER_HOST=mosquitto
-# SQLALCHEMY_DATABASE_URI= 
-# SECRET_KEY=
+MQTT_BROKER_PORT=1883
+SECRET_KEY=sc_secret_1234
