--- a/smart_cradle_server/Dockerfile
+++ b/smart_cradle_server/Dockerfile
@@ -4,6 +4,8 @@ FROM python:3.11-slim
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     libglib2.0-0 libsm6 libxrender1 libxext6 \
+    iputils-ping \
+    vim \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
