Initial commit: Smart Cradle Service - 스마트 요람 IoT 시스템
- 스마트 요람 웹/앱 서비스 구축
- Flask 기반 백엔드 서버 (세션 인증, 다중 사용자 지원)
- React Native 모바일 앱
- Terraform GCP 인프라 구성
- MQTT 프로토콜 실시간 데이터 통신
- 센서 데이터 모니터링 (온도, 습도, 소음)
- 실시간 영상 스트리밍
- 알림 시스템 (온도/습도/소음 임계값 기반)

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,140 @@
-#.gitignore for this project
-# Ignore env files
-.env
-smart_cradle_server/.env
+# SmartCradle 프로젝트 .gitignore
 
+# ========================================
+# Node & NPM (모바일 앱)
+# ========================================
+SmartCradleApp/node_modules/
+node_modules/
+npm-debug.log*
+yarn-error.log
+yarn-debug.log*
+package-lock.json.bak
+
+# ========================================
+# Expo / React Native
+# ========================================
+SmartCradleApp/.expo/
+SmartCradleApp/.expo-shared/
+SmartCradleApp/android/.gradle/
+SmartCradleApp/android/app/build/
+SmartCradleApp/ios/Pods/
+SmartCradleApp/ios/build/
+SmartCradleApp/*.keystore
+SmartCradleApp/*.jks
+SmartCradleApp/*.p12
+SmartCradleApp/*.mobileprovision
+
+# ========================================
+# Environment Variables & Secrets
+# ========================================
+.env
+.env.*
+!.env.example
+smart_cradle_server/.env
+SmartCradleApp/.env
+
+# ========================================
 # Python
+# ========================================
 __pycache__/
-*.pyc
+*.py[cod]
 *.pyo
 *.pyd
+*.pyc
+*.pyi
 env/
 venv/
+.venv/
 ENV/
 venv.bak/
+pip-wheel-metadata/
+*.egg-info/
+.eggs/
+build/
+dist/
+.mypy_cache/
+.pytest_cache/
+.coverage
+htmlcov/
+*.cover
+.hypothesis/
 
+# ========================================
+# Terraform
+# ========================================
+terraform/.terraform/
+terraform/*.tfstate
+terraform/*.tfstate.backup
+terraform/.terraform.lock.hcl
+terraform/terraform.tfvars
+!terraform/terraform.tfvars.example
+
+# ========================================
 # Docker
+# ========================================
 *.log
 docker-compose.override.yml
+docker-compose.*.yml
 
+# ========================================
 # macOS
+# ========================================
 .DS_Store
+.AppleDouble
+.LSOverride
+._*
 
-# Database backups
-backups/*.sql
+# ========================================
+# IDEs & Editors
+# ========================================
+.vscode/
+.idea/
+*.iml
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
 
-# Markdown
-.README_BACKUP.md
-.README_DOCKER.md
+# ========================================
+# Backups & Logs
+# ========================================
+backups/
+logs/
+*.bak
+*.tmp
+
+# ========================================
+# Database & Media
+# ========================================
+*.sqlite
+*.sqlite3
+*.db
+*.sql.gz
+
+# ========================================
+# Temporary & System Files
+# ========================================
+typescript
+*.pid
+*.seed
+*.pid.lock
+.npm
+.eslintcache
+
+# ========================================
+# ML Models & Large Files
+# ========================================
+*.h5
+*.pkl
+*.joblib
+*.model
+knn_model.joblib
+
+# ========================================
+# Project Specific
+# ========================================
+smart_cradle_server/__pycache__/
+Test01/.DS_Store
+수정_가이드.md
