--- a/smart_cradle_server/.env.example
+++ b/smart_cradle_server/.env.example
@@ -1,9 +1,9 @@
-MYSQL_ROOT_PASSWORD=root_password_1234
+MYSQL_ROOT_PASSWORD=
 MYSQL_DATABASE=smartcradle
 MYSQL_USER=sc_user
-MYSQL_PASSWORD=SC_password_1234@
-MYSQL_HOST=10.128.0.3
+MYSQL_PASSWORD=
+MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
 MQTT_BROKER_HOST=mosquitto
 MQTT_BROKER_PORT=1883
-SECRET_KEY=sc_secret_1234
+SECRET_KEY=
