--- a/SmartCradleApp/package.json
+++ b/SmartCradleApp/package.json
@@ -21,6 +21,7 @@
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~17.0.8",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-chart-kit": "^6.12.0",
